--- a/resources/kicad_installer.qrc
+++ b/resources/kicad_installer.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="/">
     <file>icons/kicad_x_huaqiu.png</file>
+    <file>icons/huaqiu-animate.gif</file>
     <file>themes/light-style.css</file>
   </qresource>
 </RCC>
