feat(window): implement custom window controls and update styling
- Add minimize, close, and help buttons to the title bar
- Update button icons and styling
- Adjust window bar height and button sizes
- Remove unused styles for QWK--WindowBar and QMenuBar

--- a/resources/kicad_installer.qrc
+++ b/resources/kicad_installer.qrc
@@ -3,5 +3,8 @@
     <file>icons/kicad_x_huaqiu.png</file>
     <file>icons/huaqiu-animate.gif</file>
     <file>themes/light-style.css</file>
+    <file>icons/close.svg</file>
+    <file>icons/help.svg</file>
+    <file>icons/minimize.svg</file>
   </qresource>
 </RCC>
