--- a/app/pages/pageselectinstallmethod.ui
+++ b/app/pages/pageselectinstallmethod.ui
@@ -14,6 +14,15 @@
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="spacing">
+    <number>32</number>
+   </property>
+   <property name="leftMargin">
+    <number>64</number>
+   </property>
+   <property name="rightMargin">
+    <number>64</number>
+   </property>
    <item>
     <widget class="QPushButton" name="btn_portable">
      <property name="sizePolicy">
@@ -21,6 +30,11 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="font">
+      <font>
+       <family>Microsoft YaHei</family>
+      </font>
      </property>
      <property name="text">
       <string>下载便携版</string>
@@ -35,8 +49,13 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="font">
+      <font>
+       <family>Microsoft YaHei</family>
+      </font>
+     </property>
      <property name="text">
-      <string>下载安装板</string>
+      <string>下载安装版</string>
      </property>
     </widget>
    </item>
