--- a/resources/themes/light-style.css
+++ b/resources/themes/light-style.css
@@ -51,4 +51,21 @@ QPushButton#btn_portable:hover {
 }
 
 
+QPushButton#btn_start_download{
+    background-color: #117bc2;
+    border-radius: 6px;
+    color: white;
+    font-size: 24px;
+    min-height: 48px;
+    padding: 6px;
+}
+
+QPushButton#btn_start_download:hover
+ {
+    background-color: #59ace4;
+}
+
+
+
+
 
