--- a/app/pages/pagedownloadprogress.ui
+++ b/app/pages/pagedownloadprogress.ui
@@ -35,18 +35,44 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="label_speed">
-       <property name="text">
-        <string>下载速度3MB/s</string>
-       </property>
+      <widget class="QWidget" name="widget_progress" native="true">
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QLabel" name="label_speed">
+          <property name="text">
+           <string>下载速度3MB/s</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_down_count">
+          <property name="text">
+           <string>已下载10MB，待下载500MB</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="label_down_count">
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_open_dir">
        <property name="text">
-        <string>已下载10MB，待下载500MB</string>
+        <string>打开下载文件夹</string>
        </property>
       </widget>
      </item>
