--- a/app/pages/pageconfigportable.ui
+++ b/app/pages/pageconfigportable.ui
@@ -67,6 +67,9 @@
          <property name="text">
           <string>自动创建快捷方式</string>
          </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
       </layout>
