--- a/resources/themes/light-style.css
+++ b/resources/themes/light-style.css
@@ -5,7 +5,7 @@ QWidget {
 QToolButton[system-button="true"] {
   min-width: 30px;
   border: none;
-  padding: 0;
+  padding: 2px;
   background-color: transparent;
 }
 
