--- a/app/logo/logowidget.ui
+++ b/app/logo/logowidget.ui
@@ -6,37 +6,42 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>614</width>
-    <height>300</height>
+    <width>254</width>
+    <height>186</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="lay_main">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>42</number>
+   </property>
    <item>
-    <spacer name="verticalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Orientation::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>116</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="lay_main">
-     <property name="spacing">
-      <number>16</number>
-     </property>
+    <layout class="QVBoxLayout" name="lay_logo">
      <property name="topMargin">
-      <number>40</number>
+      <number>42</number>
      </property>
      <property name="bottomMargin">
-      <number>40</number>
+      <number>16</number>
      </property>
      <item>
       <widget class="QLabel" name="lb_logo">
@@ -63,34 +68,23 @@
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QLabel" name="lb_title">
-       <property name="font">
-        <font>
-         <family>Arial</family>
-         <pointsize>24</pointsize>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>KiCad 华秋发行版</string>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Orientation::Vertical</enum>
+    <widget class="QLabel" name="lb_title">
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+       <fontweight>DemiBold</fontweight>
+      </font>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>116</height>
-      </size>
+     <property name="text">
+      <string>KiCad 华秋发行版</string>
      </property>
-    </spacer>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
