--- a/app/pages/pageselectinstallmethod.ui
+++ b/app/pages/pageselectinstallmethod.ui
@@ -6,58 +6,82 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>522</width>
-    <height>371</height>
+    <width>496</width>
+    <height>194</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
-    <number>32</number>
+    <number>0</number>
    </property>
    <property name="leftMargin">
-    <number>64</number>
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
    </property>
    <property name="rightMargin">
-    <number>64</number>
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
    </property>
    <item>
-    <widget class="QPushButton" name="btn_portable">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <widget class="QPushButton" name="btn_start_installer">
+     <property name="minimumSize">
+      <size>
+       <width>188</width>
+       <height>48</height>
+      </size>
      </property>
-     <property name="font">
-      <font>
-       <family>Microsoft YaHei</family>
-      </font>
+     <property name="maximumSize">
+      <size>
+       <width>188</width>
+       <height>48</height>
+      </size>
      </property>
      <property name="text">
-      <string>下载便携版</string>
+      <string>立即安装</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="btn_installer">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="topMargin">
+      <number>30</number>
      </property>
-     <property name="font">
-      <font>
-       <family>Microsoft YaHei</family>
-      </font>
+     <item>
+      <widget class="QLabel" name="lb_portable">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>下载便携版</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignmentFlag::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
-     <property name="text">
-      <string>下载安装版</string>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>95</height>
+      </size>
      </property>
-    </widget>
+    </spacer>
    </item>
   </layout>
  </widget>
