--- a/app/pages/pageconfigportable.ui
+++ b/app/pages/pageconfigportable.ui
@@ -55,7 +55,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_confirm_portable">
+      <widget class="QPushButton" name="btn_start_portable">
        <property name="minimumSize">
         <size>
          <width>188</width>
