style: update logo title font family
- Set font family to "PingFang SC, PingFang SC-Bold" for logo title
- Removed unnecessary <bold>false</bold> tag

--- a/app/logo/logowidget.ui
+++ b/app/logo/logowidget.ui
@@ -80,8 +80,8 @@
     <widget class="QLabel" name="lb_title">
      <property name="font">
       <font>
+       <family>PingFang SC, PingFang SC-Bold</family>
        <pointsize>20</pointsize>
-       <bold>false</bold>
        <underline>false</underline>
        <strikeout>false</strikeout>
        <kerning>false</kerning>
