--- a/app/pages/pageconfcontainer.ui
+++ b/app/pages/pageconfcontainer.ui
@@ -14,6 +14,9 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <property name="spacing">
+    <number>0</number>
+   </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -30,6 +33,9 @@
     <layout class="QVBoxLayout" name="lay_path">
      <property name="spacing">
       <number>0</number>
+     </property>
+     <property name="bottomMargin">
+      <number>32</number>
      </property>
     </layout>
    </item>
