--- a/resources/themes/light-style.css
+++ b/resources/themes/light-style.css
@@ -27,63 +27,64 @@ QToolButton#btn_close:pressed {
   background-color: #e81123;
 }
 
+QWidget,
 MainWindow {
   background-color: #f3f3f3;
+  font-size: 14px;
+  font-weight: 400;
+  color: #333333;
 }
 
-MainWindow[custom-style="true"] {
-  background-color: transparent;
+QLabel#lb_title {
+  width: 197px;
+  height: 33px;
+  font-size: 24px;
+  font-family: PingFang SC, PingFang SC-Bold;
+  font-weight: 700;
+  text-align: left;
+  color: #000000;
 }
 
 QPushButton#btn_start_installer,
 QPushButton#btn_start_portable,
-QPushButton#btn_open_dir {
-  background-color: #007bff;
-  min-height: 60px;
+QPushButton#btn_open_download_dir {
+  font-size: 18px;
+  font-family: PingFang SC, PingFang SC-Regular;
+  font-weight: 400;
+  color: #ffffff;
+  width: 188px;
+  height: 48px;
+  background: #007bff;
   border-radius: 4px;
-  color: white;
-  font-size: 32px;
 }
 
 QPushButton#btn_start_installer:hover,
 QPushButton#btn_start_portable:hover,
-QPushButton#btn_open_dir:hover {
-  background-color: #0069D9;
+QPushButton#btn_open_download_dir:hover {
+  background-color: #0069d9;
 }
 
-QPushButton#btn_start_download,
-QPushButton#btn_open_dir {
-  background-color: #007bff;
-  border-radius: 6px;
-  color: white;
-  font-size: 24px;
-  min-height: 48px;
+QLabel#lb_portable:hover {
+  color: #007bff;
 }
 
-QPushButton#btn_start_download:hover {
-  background-color: #0069D9;
-}
-
-/* Style for the Progress Bar Container */
 QProgressBar {
   border: none;
-  background-color: #e0e0e0; /* Light gray background */
-  text-align: center; /* Center the text */
-  color: black; /* Text color */
-  font-size: 14px; /* Text size */
-  border-radius: 4px; /* Rounded corners */
+  background-color: #e0e0e0;
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  border-radius: 4px;
 }
 
-/* Style for the Progress Indicator */
 QProgressBar::chunk {
-  background-color: #007bff; /* Blue progress indicator */
-  width: 1px; /* Width of the chunk */
-  margin: 0px; /* Margin between chunks */
-  border-radius: 4px; /* Rounded corners for the chunk */
+  background-color: #007bff;
+  width: 1px;
+  margin: 0px;
+  border-radius: 4px;
 }
 
-/* Additional styling for the text inside the progress bar */
 QProgressBar QLabel {
-  color: black; /* Text color */
-  padding: 0px 5px; /* Padding around the text */
+  color: black;
+  padding: 0px 5px;
 }
