--- a/app/pages/pageselectsavepath.ui
+++ b/app/pages/pageselectsavepath.ui
@@ -52,7 +52,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="le_path">
+    <widget class="QLineEdit" name="le_download_dir">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
        <horstretch>0</horstretch>
