style(light): update QProgressBar appearance
- Remove text alignment and color settings from QProgressBar
- Change background color to #e6e6e6
- Add height setting to QProgressBar
- Remove separate chunk height setting

--- a/resources/themes/light-style.css
+++ b/resources/themes/light-style.css
@@ -70,11 +70,10 @@ QLabel#lb_portable:hover {
 
 QProgressBar {
   border: none;
-  background-color: #e0e0e0;
-  text-align: center;
-  color: black;
+  background: #e6e6e6;
   font-size: 14px;
   border-radius: 4px;
+  height: 8px;
 }
 
 QProgressBar::chunk {
@@ -82,11 +81,7 @@ QProgressBar::chunk {
   width: 1px;
   margin: 0px;
   border-radius: 4px;
-}
-
-QProgressBar QLabel {
-  color: black;
-  padding: 0px 5px;
+  height: 8px;
 }
 
 QPushButton#btn_change_dir {
