refactor(ui): remove unused code and prepare for download completion page
- Remove unused #include and enum PAGE_INDEX
- Replace lambda captures with [=] for simplicity
- Hide progress widget on download completion
- Add checked.svg icon for download completion
- Update resource file to include new icon

--- a/resources/kicad_installer.qrc
+++ b/resources/kicad_installer.qrc
@@ -3,6 +3,7 @@
     <file>icons/kicad_x_huaqiu.png</file>
     <file>themes/light-style.css</file>
     <file>icons/close.svg</file>
+    <file>icons/checked.svg</file>
     <file>icons/help.svg</file>
     <file>icons/minimize.svg</file>
   </qresource>
