feat(mainwindow): add page for opening download directory
- Add PageOpenDownloadDir to the main window stack
- Move setExtractDir functionality from PageDownloadProgress to PageOpenDownloadDir
- Update UI layout for PageDownloadProgress
- Set alignment for PageOpenDownloadDir

--- a/app/pages/pagedownloadprogress.ui
+++ b/app/pages/pagedownloadprogress.ui
@@ -55,9 +55,36 @@
    <item>
     <widget class="QWidget" name="widget_p" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>9</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
       <item>
        <widget class="QWidget" name="widget_progress" native="true">
         <layout class="QVBoxLayout" name="verticalLayout">
+         <property name="spacing">
+          <number>6</number>
+         </property>
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
@@ -94,14 +121,17 @@
       <item>
        <widget class="QWidget" name="widgetw" native="true">
         <layout class="QVBoxLayout" name="verticalLayout_3">
+         <property name="spacing">
+          <number>0</number>
+         </property>
          <property name="leftMargin">
-          <number>9</number>
+          <number>0</number>
          </property>
          <property name="topMargin">
-          <number>9</number>
+          <number>0</number>
          </property>
          <property name="rightMargin">
-          <number>9</number>
+          <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
