feat(gui): add custom fonts for UI text
- Add PingFang Regular and Bold fonts to the application
- Include QFontDatabase to manage custom fonts
- Update resource file to include font resources

--- a/resources/kicad_installer.qrc
+++ b/resources/kicad_installer.qrc
@@ -1,10 +1,12 @@
 <RCC>
-  <qresource prefix="/">
-    <file>icons/kicad_x_huaqiu.png</file>
-    <file>themes/light-style.css</file>
-    <file>icons/close.svg</file>
-    <file>icons/checked.svg</file>
-    <file>icons/help.svg</file>
-    <file>icons/minimize.svg</file>
-  </qresource>
+    <qresource prefix="/">
+        <file>icons/kicad_x_huaqiu.png</file>
+        <file>themes/light-style.css</file>
+        <file>icons/close.svg</file>
+        <file>icons/checked.svg</file>
+        <file>icons/help.svg</file>
+        <file>icons/minimize.svg</file>
+        <file>fonts/PingFang Bold.ttf</file>
+        <file>fonts/PingFang Regular.ttf</file>
+    </qresource>
 </RCC>
