--- a/app/titlebar/titlebar.ui
+++ b/app/titlebar/titlebar.ui
@@ -33,6 +33,13 @@
     <number>6</number>
    </property>
    <item>
+    <widget class="QToolButton" name="btn_back">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Orientation::Horizontal</enum>
@@ -48,7 +55,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="spacing">
-      <number>12</number>
+      <number>6</number>
      </property>
      <item>
       <widget class="QToolButton" name="btn_help">
