style(light): add hover and press styles for help button
- Add hover and press styles for QToolButton#btn_help
- Update existing styles for QToolButton#btn_min

--- a/resources/themes/light-style.css
+++ b/resources/themes/light-style.css
@@ -14,7 +14,10 @@ QToolButton#btn_min {
 }
 
 QToolButton#btn_min:hover,
-QToolButton#btn_min:pressed {
+QToolButton#btn_help:hover,
+QToolButton#btn_min:pressed,
+QToolButton#btn_help:pressed
+{
   background-color: rgba(0, 0, 0, 15%);
 }
 
