--- a/app/logo/logowidget.ui
+++ b/app/logo/logowidget.ui
@@ -40,21 +40,18 @@
      <property name="topMargin">
       <number>42</number>
      </property>
-     <property name="bottomMargin">
-      <number>16</number>
-     </property>
      <item>
       <widget class="QLabel" name="lb_logo">
        <property name="minimumSize">
         <size>
-         <width>141</width>
-         <height>50</height>
+         <width>200</width>
+         <height>93</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>141</width>
-         <height>50</height>
+         <width>200</width>
+         <height>93</height>
         </size>
        </property>
        <property name="font">
@@ -67,7 +64,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="../../resources/kicad_installer.qrc">:/icons/kicad_x_huaqiu.png</pixmap>
+        <pixmap resource="../../resources/kicad_installer.qrc">:/icons/kicad_x_huaqiu_full.png</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -75,23 +72,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item>
-    <widget class="QLabel" name="lb_title">
-     <property name="font">
-      <font>
-       <underline>false</underline>
-       <strikeout>false</strikeout>
-       <kerning>false</kerning>
-      </font>
-     </property>
-     <property name="text">
-      <string>KiCad 华秋发行版</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignmentFlag::AlignCenter</set>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
