--- a/app/pages/pageselectinstallmethod.ui
+++ b/app/pages/pageselectinstallmethod.ui
@@ -44,7 +44,7 @@
       </size>
      </property>
      <property name="text">
-      <string>立即安装</string>
+      <string>下载安装版</string>
      </property>
     </widget>
    </item>
