--- a/resources/kicad_installer.qrc
+++ b/resources/kicad_installer.qrc
@@ -1,13 +1,14 @@
 <RCC>
     <qresource prefix="/">
         <file>icons/kicad_x_huaqiu.png</file>
+        <file>icons/kicad_x_huaqiu_full.png</file>
         <file>themes/light-style.css</file>
         <file>icons/close.svg</file>
         <file>icons/arrow-left.svg</file>
         <file>icons/checked.svg</file>
         <file>icons/help.svg</file>
         <file>icons/minimize.svg</file>
-        <file>fonts/PingFang Bold.ttf</file>
-        <file>fonts/PingFang Regular.ttf</file>
+        <!-- <file>fonts/PingFang Bold.ttf</file>
+        <file>fonts/PingFang Regular.ttf</file> -->
     </qresource>
 </RCC>
