layout(pageselectsavepath): adjust spacing and button size
- Set layout spacing to 8 pixels for better alignment
- Remove minimum width constraint from the button for responsive design

--- a/app/pages/pageselectsavepath.ui
+++ b/app/pages/pageselectsavepath.ui
@@ -32,6 +32,9 @@
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="spacing">
+    <number>8</number>
+   </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -61,7 +64,7 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>360</width>
+       <width>0</width>
        <height>0</height>
       </size>
      </property>
